# sedgewick

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.dev.md  README.md
1012_quickfind/: .gitignore  Makefile  qfind.c
1012_quickfind/src/: main.c
1015_quickunion/: .gitignore  Makefile
1015_quickunion/src/: main.c
1017_quickunion_weighted/: .gitignore  Makefile
1017_quickunion_weighted/src/: main.c
10190101/src/: main.c
10190105/src/: main.c
108203001/src/: main.c
10820301/: Makefile
10820301/src/: main.c
10820302/: Makefile
10820302/src/: main.c
10820303/src/: main.c
10820304/src/: main.c
10820306/: .gitignore  program.c
10820306/src/: main.c
src/101200000/: CMakeLists.txt  main.c
src/101500000/: CMakeLists.txt
src/101700000/: CMakeLists.txt  main.c
src/101901004/: CMakeLists.txt  main.c
src/101901005/: CMakeLists.txt  main.c
src/101901007/: CMakeLists.txt  main.c
src/108203001/: CMakeLists.txt
src/108203002/: CMakeLists.txt  main.c
src/108203003/: CMakeLists.txt  main.c
src/108203004/: CMakeLists.txt  main.c
src/108203006/: CMakeLists.txt
src/108203007/: CMakeLists.txt  main.c  point.c  point.h
src/108203008/: CMakeLists.txt  main.c  point.c  point.h
src/108203009/: CMakeLists.txt  main.c  polar_point.c  polar_point.h
src/108203010/: CMakeLists.txt  README.md  main.c  options.c  options.h  point.c  point.h  triangle.c  triangle.h
src/108400000/: CMakeLists.txt  README.md  main.c
src/108400001/: CMakeLists.txt  README.md  main.c  options.c  options.h
src/108700000/: CMakeLists.txt  README.md  main.c
src/108700001/: CMakeLists.txt  README.md  main.c  options.c  options.h
src/108800000/: CMakeLists.txt  Point.c  Point.h  README.md  main.c
src/108800001/: CMakeLists.txt  README.md  main.c  options.c  options.h  point.c  point.h
src/108903011/: CMakeLists.txt  README.md  main.c
src/108903013/: CMakeLists.txt  README.md  main.c  options.c  options.h
src/108903014/: CMakeLists.txt  README.md  main.c  options.c  options.h
src/108903015/: README.md
src/108903017/: CMakeLists.txt  (+4 more)
template/: program.c
(+35 files in other folders)
